--- a/style.css
+++ b/style.css
@@ -231,11 +231,30 @@ body:not(.light-mode) #feedbackDialog {
 }
 
 
+#helpSearchContainer {
+  position: relative;
+}
+
 #helpSearch {
   width: 100%;
   margin: 10px 0;
-  padding: 5px;
+  padding: 5px 2em 5px 5px;
   box-sizing: border-box;
+}
+
+#helpSearchClear {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+#helpSearchClear[hidden] {
+  display: none;
 }
 
 #helpSections section[hidden],
