--- a/overview-print.css
+++ b/overview-print.css
@@ -58,3 +58,15 @@ table, th, td {
   color: #000;
   font-weight: bold;
 }
+
+.device-category {
+  flex: 1 1 50%;
+}
+
+.device-category:nth-of-type(2n) {
+  page-break-after: always;
+}
+
+.device-block-grid.two-column {
+  grid-template-columns: 1fr;
+}
