--- a/style.css
+++ b/style.css
@@ -527,6 +527,11 @@ button:disabled {
   justify-content: center;
   padding: 0;
 }
+#darkModeToggle,
+#pinkModeToggle {
+  min-width: 32px;
+  min-height: 32px;
+}
 #helpButton {
   min-width: 32px;
   padding: 2px 4px;
