--- a/style.css
+++ b/style.css
@@ -530,6 +530,10 @@ button:disabled {
   align-items: center;
 
 }
+#langSelector select,
+#langSelector button {
+  height: 32px;
+}
 #langSelector select {
   font-size: 1em;
   padding: 2px 4px;
@@ -539,21 +543,14 @@ button:disabled {
   border-radius: 5px;
 }
 #langSelector button {
-  min-width: 44px;
-  min-height: 44px;
+  min-width: 32px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   padding: 0;
 }
-#darkModeToggle,
-#pinkModeToggle {
-  min-width: 32px;
-  min-height: 32px;
-}
 #helpButton {
-  min-width: 32px;
-  padding: 2px 4px;
+  padding: 0 4px;
   font-size: 1em;
 }
 
