--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* General styles */
 :root {
   --accent-color: #001589;
@@ -20,8 +19,8 @@ body {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  font-family: system-ui, sans-serif;
+  font-weight: 400;
   margin: 20px auto;
   max-width: 1200px;
   background-color: #ffffff;
@@ -98,7 +97,7 @@ textarea:focus {
   margin-top: 10px;
 }
 h1, h2, h3 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: system-ui, sans-serif;
   font-weight: 500;
   color: var(--accent-color);
 }
@@ -1172,7 +1171,7 @@ body.dark-mode.pink-mode .help-content { border-color: var(--accent-color); }
   overflow-y: auto;
   background: #fff;
   color: #333;
-  font-family: 'Open Sans', sans-serif;
+  font-family: system-ui, sans-serif;
 }
 #overviewDialogContent h1,
 #overviewDialogContent h2,
